{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 111,
  "lineage": "ffa03493-4bf0-a4cb-c1e6-dae00a58e8db",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:216874796625:loadbalancer/app/frontend-alb/8a2a34b8bb1ed951",
            "arn_suffix": "app/frontend-alb/8a2a34b8bb1ed951",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-alb-882613405.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:216874796625:loadbalancer/app/frontend-alb/8a2a34b8bb1ed951",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a042ce6e2e5bced0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-063f2fc51564e0097"
              },
              {
                "subnet_id": "subnet-0799009f9f68b24f0"
              }
            ],
            "subnets": [
              "subnet-063f2fc51564e0097",
              "subnet-0799009f9f68b24f0"
            ],
            "vpc_id": "vpc-09128d04506ac3454",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "module.networking.aws_security_group.master_node_sg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.cluster",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.list_azs"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:216874796625:listener/app/frontend-alb/8a2a34b8bb1ed951/41326c577c1c4df9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:216874796625:targetgroup/frontend-tg/0da560df13747777",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:216874796625:listener/app/frontend-alb/8a2a34b8bb1ed951/41326c577c1c4df9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:216874796625:loadbalancer/app/frontend-alb/8a2a34b8bb1ed951",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.frontend_alb",
            "module.load_balancer.aws_lb_target_group.frontend_tg",
            "module.networking.aws_security_group.master_node_sg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.cluster",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.list_azs"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:216874796625:targetgroup/frontend-tg/0da560df13747777",
            "arn_suffix": "targetgroup/frontend-tg/0da560df13747777",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:216874796625:targetgroup/frontend-tg/0da560df13747777",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:216874796625:loadbalancer/app/frontend-alb/8a2a34b8bb1ed951"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09128d04506ac3454"
          },
          "dependencies": [
            "module.networking.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:216874796625:internet-gateway/igw-0a93b6342ff2f819c",
            "id": "igw-0a93b6342ff2f819c",
            "owner_id": "216874796625",
            "tags": {
              "Name": "ecs IGW"
            },
            "tags_all": {
              "Name": "ecs IGW"
            },
            "vpc_id": "vpc-09128d04506ac3454"
          },
          "dependencies": [
            "module.networking.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a93b6342ff2f819c",
            "id": "r-rtb-0bc09f8e04882dc3a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bc09f8e04882dc3a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:216874796625:route-table/rtb-0e8829124bdc4aa70",
            "id": "rtb-0e8829124bdc4aa70",
            "owner_id": "216874796625",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09128d04506ac3454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:216874796625:route-table/rtb-0bc09f8e04882dc3a",
            "id": "rtb-0bc09f8e04882dc3a",
            "owner_id": "216874796625",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a93b6342ff2f819c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09128d04506ac3454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dab69a8dbba12f3d",
            "route_table_id": "rtb-0e8829124bdc4aa70",
            "subnet_id": "subnet-05d1b2767be3a5043"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.cluster",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.list_azs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0061f39819e15d4f8",
            "route_table_id": "rtb-0bc09f8e04882dc3a",
            "subnet_id": "subnet-0799009f9f68b24f0"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.cluster",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.list_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0223477d8beb11988",
            "route_table_id": "rtb-0bc09f8e04882dc3a",
            "subnet_id": "subnet-063f2fc51564e0097"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.cluster",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.list_azs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:216874796625:security-group/sg-07062e0db9b0cbbbd",
            "description": "Security group for frontend ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07062e0db9b0cbbbd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c43d3aeb38dc74d8"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "216874796625",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Frontend ECS Security Group"
            },
            "tags_all": {
              "Name": "Frontend ECS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09128d04506ac3454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.frontend_sg",
            "module.networking.aws_security_group.master_node_sg",
            "module.networking.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:216874796625:security-group/sg-02d0d84c2caa0b126",
            "description": "Security group for frontend ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d0d84c2caa0b126",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07062e0db9b0cbbbd"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "216874796625",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Frontend ECS Security Group"
            },
            "tags_all": {
              "Name": "Frontend ECS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09128d04506ac3454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.backend_sg",
            "module.networking.aws_security_group.frontend_sg",
            "module.networking.aws_security_group.master_node_sg",
            "module.networking.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:216874796625:security-group/sg-0c43d3aeb38dc74d8",
            "description": "Security group for frontend ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c43d3aeb38dc74d8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a042ce6e2e5bced0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-sg",
            "name_prefix": "",
            "owner_id": "216874796625",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Frontend ECS Security Group"
            },
            "tags_all": {
              "Name": "Frontend ECS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09128d04506ac3454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.master_node_sg",
            "module.networking.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:216874796625:security-group/sg-0a042ce6e2e5bced0",
            "description": "Security group for Kubernetes master node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a042ce6e2e5bced0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "master-node-sg",
            "name_prefix": "",
            "owner_id": "216874796625",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb Security Group"
            },
            "tags_all": {
              "Name": "alb Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09128d04506ac3454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:216874796625:subnet/subnet-05d1b2767be3a5043",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d1b2767be3a5043",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216874796625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-09128d04506ac3454"
          },
          "dependencies": [
            "module.networking.aws_vpc.cluster",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.list_azs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:216874796625:subnet/subnet-0799009f9f68b24f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.123.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0799009f9f68b24f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216874796625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public-1"
            },
            "tags_all": {
              "Name": "terra-public-1"
            },
            "vpc_id": "vpc-09128d04506ac3454"
          },
          "dependencies": [
            "module.networking.aws_vpc.cluster",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.list_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:216874796625:subnet/subnet-063f2fc51564e0097",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063f2fc51564e0097",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216874796625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public-2"
            },
            "tags_all": {
              "Name": "terra-public-2"
            },
            "vpc_id": "vpc-09128d04506ac3454"
          },
          "dependencies": [
            "module.networking.aws_vpc.cluster",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.list_azs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:216874796625:vpc/vpc-09128d04506ac3454",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0f31f43a40cd6625d",
            "default_route_table_id": "rtb-0f75d4334ec7b5101",
            "default_security_group_id": "sg-09ae2bbb0aefba85d",
            "dhcp_options_id": "dopt-0072244a6089cec4e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09128d04506ac3454",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f75d4334ec7b5101",
            "owner_id": "216874796625"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}